Fixed all layout issues on mobile devices. Fixed minor centering issue with the scoreboard.

--- a/rem-styles.css
+++ b/rem-styles.css
@@ -256,6 +256,13 @@ span.push-right {
 .score-table h1 {
     font-size: 10rem;
     line-height: 11rem;
+    /**
+     * Not using .vertical-center anymore because transform is unreliable on mobile browsers.
+     * 11 (h1) + 8 (h2) + 4 (progressBar) = 23
+     * 33.33 (score-table) - 23 = 10.33
+     * 10.33/2 = ~5.5
+     */
+    margin-top: 5.5rem;
 }
 .score-table h2 {
     font-size: 7rem;
@@ -335,7 +342,7 @@ span.push-right {
 }
 #scoreboard ol {
     width: 70%;
-    margin: 0 auto;
+    margin: 0 10% 0 20%;
 }
 #scoreboard li {
     width: 100%;
